--- a/src/app/features/report-section/components/employee-report/employee-report.component.html
+++ b/src/app/features/report-section/components/employee-report/employee-report.component.html
@@ -7,7 +7,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-blue-600" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
               </svg>
-              Employee Report
+              All Employees Overview
             </h3>
             <p class="text-xs text-gray-500">View all employee records</p>
           </div>
