--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -217,6 +217,8 @@
           View My Project Team's Timesheet
         </a>
 
+      
+
         <!-- Reporting Sections -->
         <div class="border-t border-gray-200 my-1"></div>
         <a (click)="navigateToManagersHubSection('viewMyReportingTeam')"
@@ -229,6 +231,29 @@
           class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
           View My Reporting Team's Timesheet
         </a>
+
+
+        <div class="border-t border-gray-200 my-1"></div>
+        <a (click)="navigateToManagersHubSection('backdateRequests')"
+          [class.active-link]="isManagersHubSectionActive('backdateRequests')"
+          class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
+          <div class="flex items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+            </svg>
+            Backdate Requests
+          </div>
+        </a>
+        <a (click)="navigateToManagersHubSection('timesheetCalendarView')"
+   [class.active-link]="isManagersHubSectionActive('timesheetCalendarView')"
+   class="block px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
+   <div class="flex items-center">
+     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+     </svg>
+     Timesheet Calendar
+   </div>
+</a>
 
 
       </div>
