--- a/src/app/features/timesheet/components/managers-hub/managers-hub.component.html
+++ b/src/app/features/timesheet/components/managers-hub/managers-hub.component.html
@@ -2007,7 +2007,7 @@
             <!-- Calendar Grid -->
             <div *ngIf="calendarEmployees.length > 0 && calendarDays.length > 0; else noDataTemplate"
                 class="overflow-x-auto pb-4">
-                <!-- <table class="w-full text-xs border-collapse">
+                <table class="w-full text-xs border-collapse">
                     <thead>
                         <tr class="bg-gray-50">
                             <th class="sticky left-0 px-4 py-2 bg-gray-50 border border-gray-200 text-center z-10 w-40">
@@ -2055,7 +2055,7 @@
                             </td>
                         </tr>
                     </tbody>
-                </table> -->
+                </table>
             </div>
 
             <!-- No Data Template -->
