--- a/src/app/features/app-center/app-center.component.html
+++ b/src/app/features/app-center/app-center.component.html
@@ -86,7 +86,7 @@
         </a>
 
       <!-- Add this inside the grid container, after the existing cards -->
-        <a *ngIf="showDeveloperTools" routerLink="/developer-section"
+        <!-- <a *ngIf="showDeveloperTools" routerLink="/developer-section"
           class="app-card group relative overflow-hidden bg-white rounded-xl shadow-md transition-all duration-300 hover:shadow-lg hover:-translate-y-1 border border-gray-200">
           <div
             class="absolute inset-0 bg-gradient-to-br from-blue-50/50 to-white opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -109,7 +109,7 @@
               </svg>
             </div>
           </div>
-        </a>
+        </a> -->
 
 
         <a *ngIf="showReports" routerLink="/report-section"
