--- a/src/app/features/timesheet/components/pm-timesheet/pm-timesheet.component.html
+++ b/src/app/features/timesheet/components/pm-timesheet/pm-timesheet.component.html
@@ -12,15 +12,26 @@
             </div>
 
             <div class="text-right">
-                <div class="flex items-center justify-end text-green-600">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-                    </svg>
-                    <span class="font-medium">
-                        {{ calculateTotalTime().hours }}h {{ calculateTotalTime().minutes }}m
-                    </span>
-                </div>
-            </div>
+    <div class="flex items-center justify-end" [ngClass]="{
+        'text-red-600': calculateTotalHours() < 6,
+        'text-orange-500': calculateTotalHours() >= 6 && calculateTotalHours() <= 8,
+        'text-green-600': calculateTotalHours() > 8
+    }">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+        <span class="font-medium">
+            {{ calculateTotalTime().hours }}h {{ calculateTotalTime().minutes }}m
+        </span>
+    </div>
+    <div class="text-xs mt-1" [ngClass]="{
+        'text-red-500': calculateTotalHours() < 6,
+        'text-orange-500': calculateTotalHours() >= 6 && calculateTotalHours() <= 8,
+        'text-green-500': calculateTotalHours() > 8
+    }">
+        {{ getHoursStatusText() }}
+    </div>
+</div>
         </div>
 
         <form #timesheetForm="ngForm" (ngSubmit)="submitTimesheet(timesheetForm); $event.preventDefault()">
