--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -358,6 +358,17 @@
         </svg>
         Team Timesheets
       </a>
+
+        <a (click)="navigateToReportSection('pm-timesheet-report')"
+    [class.active-link]="isReportSectionActive('pm-timesheet-report')"
+    class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-400 hover:text-white cursor-pointer">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2 text-[#0071ac]" fill="none" viewBox="0 0 24 24"
+      stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+    </svg>
+    PM Timesheets
+  </a>
       
       <a (click)="navigateToReportSection('project-report')"
         [class.active-link]="isReportSectionActive('project-report')"
