--- a/src/app/features/report-section/components/team-timesheet-report/team-timesheet-report.component.html
+++ b/src/app/features/report-section/components/team-timesheet-report/team-timesheet-report.component.html
@@ -73,15 +73,15 @@
               </div>
   
               <div class="relative w-full">
-                <label class="block text-xs font-medium mb-1">Project</label>
-                <ng-select [(ngModel)]="projectFilter" (change)="applyFilters()"
-                  class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
-                  <ng-option [value]="">Select Project</ng-option>
-                  <ng-option *ngFor="let project of optionProjects" [value]="project.project_id">
-                    {{ project.project_name }}
-                  </ng-option>
-                </ng-select>
-              </div>
+  <label class="block text-xs font-medium mb-1">Project</label>
+  <ng-select [(ngModel)]="projectNameFilter" (change)="applyFilters()"
+    class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
+    <ng-option [value]="">Select Project</ng-option>
+    <ng-option *ngFor="let project of distinctProjectNames" [value]="project.name">
+      {{ project.name }}
+    </ng-option>
+  </ng-select>
+</div>
   
               <div class="relative w-full">
                 <label class="block text-xs font-medium mb-1">Employee</label>
@@ -105,16 +105,16 @@
                 </ng-select>
               </div>
   
-              <div class="relative w-full">
-                <label class="block text-xs font-medium mb-1">Task</label>
-                <ng-select [(ngModel)]="phasesFilter" (change)="applyFilters()"
-                  class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
-                  <ng-option [value]="">Select Task</ng-option>
-                  <ng-option *ngFor="let phases of optionPhases" [value]="phases.phase_id">
-                    {{ phases.project_phase_name }}
-                  </ng-option>
-                </ng-select>
-              </div>
+             <div class="relative w-full">
+  <label class="block text-xs font-medium mb-1">Task</label>
+  <ng-select [(ngModel)]="taskNameFilter" (change)="applyFilters()"
+    class="text-xs custom-ng-select-filter w-full" [clearable]="true" [searchable]="true">
+    <ng-option [value]="">Select Task</ng-option>
+    <ng-option *ngFor="let task of distinctTaskNames" [value]="task.name">
+      {{ task.name }}
+    </ng-option>
+  </ng-select>
+</div>
   
               <div class="relative w-full">
                 <label class="block text-xs font-medium mb-1">Deliverable</label>
@@ -143,7 +143,7 @@
                   class="text-xs custom-ng-select-filter w-full" [clearable]="true">
                   <ng-option [value]="">Select Task Status</ng-option>
                   <ng-option [value]="1">Completed</ng-option>
-                  <ng-option [value]="0">Pending</ng-option>
+                  <ng-option [value]="0">In Progress</ng-option>
                 </ng-select>
               </div>
   
